updated package info

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "desmart/pagination",
     "description": "Laravel pagination on steroids",
+    "keywords": ["laravel", "pagination"],
+    "license": "MIT",
     "authors": [
         {
             "name": "Radoslaw Mejer",
