--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.0.x",
-        "illuminate/pagination": "4.0.x",
-        "illuminate/routing": "4.0.x"
+        "illuminate/support": ">=4.0.0",
+        "illuminate/pagination": ">=4.0.0",
+        "illuminate/routing": ">=4.0.0"
     },
     "autoload": {
         "psr-0": {
