--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.*",
-        "illuminate/pagination": "4.1.*",
-        "illuminate/routing": "~4.1.10"
+        "illuminate/support": "4.2.*",
+        "illuminate/pagination": "4.2.*",
+        "illuminate/routing": "4.2.*"
     },
     "autoload": {
         "psr-0": {
